reworks the find meal log feature